--- a/src/stories/components/ChecFileUploader.stories.mdx
+++ b/src/stories/components/ChecFileUploader.stories.mdx
@@ -24,7 +24,7 @@ import FileRow from '../../components/ChecFileUploader/FileRow.vue';
       },
       data() {
         return {
-          files: [],
+          files: {},
         };
       },
       props: {
@@ -35,23 +35,31 @@ import FileRow from '../../components/ChecFileUploader/FileRow.vue';
       methods: {
         addedFile(file) {
           action('added-file');
-          this.files = [ ...this.files, file ];
+          this.files[file.upload.uuid] = file;
         },
         removeFile(file) {
           action('remove-file');
-          this.files = [ ...this.files.filter((f) => f.upload.uuid !== file.upload.uuid)];
+          if (file.upload.progress < 100) {
+            return;
+          }
+          const files = { ...this.files };
+          delete files[file.upload.uuid];
+          this.files = { ...files };
         },
-        uploadingFile: action('uploading-file'),
+        uploadingFile(file) {
+          action('uploading-file');
+          this.files[file.upload.uuid] = file;
+        },
       },
       template: `
         <div class="p-16 flex justify-center w-full h-full bg-white py-20">
           <ChecFileUploader
             :files="files"
             @file-added="addedFile"
-            @file-uploading-complete="uploadingFileComplete"
             @remove-file="removeFile"
             @file-uploading="uploadingFile"
-            :endpoint="endpoint" />
+            :endpoint="endpoint"
+          />
         </div>`
     }}
   </Story>
