--- a/src/stories/styles/colors.stories.mdx
+++ b/src/stories/styles/colors.stories.mdx
@@ -9,7 +9,7 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
   <Story name="Colors - Marketing">
     {{
       data: () => ({
-        colors: ['primary-gradient', 'dark-blue', 'primary-blue', 'hologram', 'primary-gradient-2'],
+        colors: ['primary-gradient', 'dark-blue', 'primary-blue', 'hologram', 'chec-gradient'],
       }),
       template: `
         <div class="py-16 flex justify-center space-x-2">
@@ -29,7 +29,7 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
   <Story name="Grays (Product & Marketing)">
     {{
       data: () => ({
-        colors: ['black'].concat([6,5,4,3,2,1].map(n => `gray-${n}00`)).concat(['white', 'gray-gradient', 'dark-gray-gradient']),
+        colors: ['black'].concat([7,6,5,4,3,2,1].map(n => `gray-${n}00`)).concat(['white', 'gray-gradient', 'dark-gray-gradient']),
       }),
       template: `
         <div class="py-16 flex justify-center space-x-2">
