--- a/src/stories/components/ChecButton.stories.mdx
+++ b/src/stories/components/ChecButton.stories.mdx
@@ -44,7 +44,7 @@ Todo list
           default: boolean('Disabled', false),
         },
         text: {
-          default: text('Text', 'Button text'),
+          default: text('Text', 'Hello'),
         },
         hasIcon: {
           default: boolean('Show Icon', true),
