--- a/src/stories/components/ChecTag.stories.mdx
+++ b/src/stories/components/ChecTag.stories.mdx
@@ -31,9 +31,9 @@ import ChecTagGroup from '../../components/ChecTagGroup';
           type: Boolean,
           default: () => boolean('Disabled', false),
         },
-        hideDismiss: {
+        undismissible: {
           type: Boolean,
-          default: () => boolean('Hide dismiss', false),
+          default: () => boolean('Undismissible', false),
         },
       },
       methods: {
@@ -45,7 +45,7 @@ import ChecTagGroup from '../../components/ChecTagGroup';
             :color="color"
             :active="active"
             :disabled="disabled"
-            :hide-dismiss="hideDismiss"
+            :undismissible="undismissible"
             @dismiss="handleDismiss"
           >
             {{ tagText }}
@@ -68,9 +68,9 @@ import ChecTagGroup from '../../components/ChecTagGroup';
         color: {
           default: select('Color', ['light-grey', 'dark-grey', 'white']),
         },
-        hideDismiss: {
+        undismissible: {
           type: Boolean,
-          default: () => boolean('Hide dismiss', false),
+          default: () => boolean('Undismissible', false),
         },
         hideReset: {
           type: Boolean,
@@ -84,19 +84,19 @@ import ChecTagGroup from '../../components/ChecTagGroup';
       template: `
         <div class="mx-auto max-w-4xl pt-6">
           <ChecTagGroup :hide-reset="hideReset" @reset="handleReset">
-            <ChecTag :color="color" :disabled="disabled" :hide-dismiss="hideDismiss" @dismiss="handleDismiss">
+            <ChecTag :color="color" :disabled="disabled" :undismissible="undismissible" @dismiss="handleDismiss">
               Marketing
             </ChecTag>
-            <ChecTag :color="color" :disabled="disabled" :hide-dismiss="hideDismiss" active @dismiss="handleDismiss">
+            <ChecTag :color="color" :disabled="disabled" :undismissible="undismissible" active @dismiss="handleDismiss">
               Developers and designers
             </ChecTag>
-            <ChecTag :color="color" :hide-dismiss="hideDismiss" active disabled @dismiss="handleDismiss">
+            <ChecTag :color="color" :undismissible="undismissible" active disabled @dismiss="handleDismiss">
               Come and talk to us now, we will solve all of your problems!
             </ChecTag>
-            <ChecTag :color="color" :hide-dismiss="hideDismiss" disabled @dismiss="handleDismiss">
+            <ChecTag :color="color" :undismissible="undismissible" disabled @dismiss="handleDismiss">
               Guides &amp; tutorials
             </ChecTag>
-            <ChecTag :color="color" :disabled="disabled" :hide-dismiss="hideDismiss" @dismiss="handleDismiss">
+            <ChecTag :color="color" :disabled="disabled" :undismissible="undismissible" @dismiss="handleDismiss">
               Developers and designers
             </ChecTag>
           </ChecTagGroup>
