--- a/src/stories/components/ChecVerticalNavigation.stories.mdx
+++ b/src/stories/components/ChecVerticalNavigation.stories.mdx
@@ -2,55 +2,50 @@ import { Meta, Story, Preview, Props } from '@storybook/addon-docs/blocks';
 import StoryRouter from 'storybook-vue-router';
 import { boolean } from '@storybook/addon-knobs';
 import { action } from "@storybook/addon-actions";
-
 import ChecVerticalNavigation from '../../components/ChecVerticalNavigation.vue';
+import ChecVerticalNavItem from '../../components/ChecVerticalNavItem.vue';
+const routes = [
+  {
+    path: '/first',
+  },
+  {
+    path: '/second',
+  },
+  {
+    path: '/third',
+  },
+  {
+    path: '/forth',
+  },
+    {
+    path: '/fifth',
+  },
+];
 
 <Meta title="Components/Vertical Navigation" component={ChecVerticalNavigation} />
 
 # Vertical Navigation
 
-The Vertical Navigation component...
+The Vertical Navigation component is
 
 <Props of={ChecVerticalNavigation} />
 
 <Preview>
-  <Story name="Default">
+  <Story name="Default" decorators={[ StoryRouter({}, { routes })]}>
     {{
       components: {
-        ChecVerticalNavigation
-      },
-      data() {
-        return {
-          options: [
-            {
-              label: 'Details',
-              link: '',
-              active: true,
-            },
-            {
-              label: 'Price',
-              link: '',
-            },
-            {
-              label: 'Images',
-              link: '',
-            },
-            {
-              label: 'Extra fields',
-              link: '',
-            },
-            {
-              label: 'Digital delivery',
-              link: '',
-            }
-          ]
-        };
+        ChecVerticalNavigation,
+        ChecVerticalNavItem,
       },
       template: `
       <div class="py-16 flex bg-gray-200 justify-center">
-        <ChecVerticalNavigation
-          :options="options"
-        />
+        <ChecVerticalNavigation>
+          <ChecVerticalNavItem to=/first>Hi I'm first</ChecVerticalNavItem>
+          <ChecVerticalNavItem to='/second'>Hi I'm second</ChecVerticalNavItem>
+          <ChecVerticalNavItem to='/third'>Hi I'm third</ChecVerticalNavItem>
+          <ChecVerticalNavItem to='/forth'>Hi I'm forth</ChecVerticalNavItem>
+          <ChecVerticalNavItem to='/fifth'>Hi I'm fifth</ChecVerticalNavItem>
+        </ChecVerticalNavigation>
       </div>`
     }}
   </Story>
