add docs to nav story

--- a/src/stories/components/ChecVerticalNavigation.stories.mdx
+++ b/src/stories/components/ChecVerticalNavigation.stories.mdx
@@ -26,7 +26,7 @@ const routes = [
 
 # Vertical Navigation
 
-The Vertical Navigation component is
+The Vertical Navigation component uses the Vue router router-link component to render as native link tags. To implement the ChecNavigation and ChecVerticalNavItem components, define a set of routes and wrap the child nav item components in the parent navigation component.
 
 <Props of={ChecVerticalNavigation} />
 
