edit styling from Guy's review

--- a/src/stories/components/ChecVerticalNavigation.stories.mdx
+++ b/src/stories/components/ChecVerticalNavigation.stories.mdx
@@ -39,7 +39,7 @@ The Vertical Navigation component uses the Vue router router-link component to r
       },
       template: `
       <div class="py-16 flex bg-gray-200 justify-center">
-        <ChecVerticalNavigation>
+        <ChecVerticalNavigation class="w-56">
           <ChecVerticalNavItem to=/first>Hi I'm first</ChecVerticalNavItem>
           <ChecVerticalNavItem to='/second'>Hi I'm second</ChecVerticalNavItem>
           <ChecVerticalNavItem to='/third'>Hi I'm third</ChecVerticalNavItem>
