Componentizing the action prepend

--- a/src/stories/components/ChecIcon.stories.mdx
+++ b/src/stories/components/ChecIcon.stories.mdx
@@ -78,7 +78,7 @@ const colors = {
             :icon="icon"
             class="w-6 h-6"
             :class="color"
-            v-tooltip.top="icon"
+            v-tooltip="icon"
           />
         </div>`,
     }}
