--- a/src/stories/components/TextField.stories.mdx
+++ b/src/stories/components/TextField.stories.mdx
@@ -4,6 +4,7 @@ import { withKnobs, object, boolean, text, select } from '@storybook/addon-knobs
 import { withInfo } from 'storybook-addon-vue-info'
 import TextField from '../../components/TextField.vue';
 import ChecIcon from '../../components/ChecIcon.vue';
+import ChecFormFieldActionPrepend from '../../components/ChecFormFieldActionPrepend.vue';
 import ChecSwitch from '../../components/ChecSwitch.vue';
 import ChecSegmentedButtonsGroup from '../../components/ChecSegmentedButtonsGroup.vue';
 import { uiIcons } from '../../lib/icons';
@@ -253,6 +254,9 @@ import { uiIcons } from '../../lib/icons';
         },
         actionLabel: {
           default: text('Action label', 'Click me'),
+        },
+        tooltip: {
+          default: text('Tooltip copy', 'Lorem Ipsum Dolor'),
         }
       },
       methods: {
@@ -262,15 +266,26 @@ import { uiIcons } from '../../lib/icons';
       },
       components: {
         TextField,
+        ChecFormFieldActionPrepend
       },
       template: `
         <div class="py-16 flex justify-center">
-          <TextField
-            :label="label"
-            v-model="inputValue"
-            :actionLabel="actionLabel"
-            @action-click="handleClick"
-          />
+          <div>
+            <ChecFormFieldActionPrepend
+              class="text-right"
+              :label="actionLabel"
+              :tooltip="tooltip"
+            />
+            <TextField
+              :label="label"
+              v-model="inputValue"
+            />
+            <ChecFormFieldActionPrepend
+              class="text-right"
+              :label="actionLabel"
+              @action-click="handleClick"
+            />
+          </div>
         </div>
       `
     }}
