--- a/src/stories/components/ChecImageUploader.stories.mdx
+++ b/src/stories/components/ChecImageUploader.stories.mdx
@@ -3,7 +3,7 @@ import { action } from '@storybook/addon-actions';
 import { withKnobs, text, boolean } from '@storybook/addon-knobs';
 import ChecImageManager from '../../components/ChecImageManager.vue';
 
-<Meta title="Form fields/Image Manager" component={ChecImageManager} />
+<Meta title="Form fields/Image manager" component={ChecImageManager} />
 
 # Dropdown
 
@@ -58,7 +58,7 @@ import ChecImageManager from '../../components/ChecImageManager.vue';
         },
       },
       template: `
-        <div class="p-16 flex justify-center w-full h-full bg-white py-20">
+        <div class="p-16 flex justify-center max-w-6xl mx-auto w-full h-full bg-white py-20">
           <ChecImageManager
             :files="Object.values(files)"
             @handle-click="handleClick"
