Add the ability to drag & drop sort images in the image manager

--- a/src/stories/components/ChecFileUploader.stories.mdx
+++ b/src/stories/components/ChecFileUploader.stories.mdx
@@ -6,15 +6,13 @@ import FileRow from '../../components/ChecFileUploader/FileRow.vue';
 
 <Meta title="Form fields/File uploader" component={ChecFileUploader} />
 
-# Dropdown
+# File uploader
 
 <details>
 
 </details>
 
 <Props of={ChecFileUploader} />
-
-# Default:
 
 <Preview>
   <Story name="Default">
