--- a/src/stories/components/ChecVerticalNavigation.stories.mdx
+++ b/src/stories/components/ChecVerticalNavigation.stories.mdx
@@ -4,34 +4,19 @@ import { boolean } from '@storybook/addon-knobs';
 import { action } from "@storybook/addon-actions";
 import ChecVerticalNavigation from '../../components/ChecVerticalNavigation.vue';
 import ChecVerticalNavItem from '../../components/ChecVerticalNavItem.vue';
-const routes = [
-  {
-    path: '/first',
-  },
-  {
-    path: '/second',
-  },
-  {
-    path: '/third',
-  },
-  {
-    path: '/forth',
-  },
-    {
-    path: '/fifth',
-  },
-];
 
-<Meta title="Components/Vertical Navigation" component={ChecVerticalNavigation} />
+<Meta title="Components/Vertical navigation" component={ChecVerticalNavigation} />
 
-# Vertical Navigation
+# Vertical navigation
 
-The Vertical Navigation component uses the Vue router router-link component to render as native link tags. To implement the ChecNavigation and ChecVerticalNavItem components, define a set of routes and wrap the child nav item components in the parent navigation component.
+The Vertical navigation component uses the Vue router router-link component to render as native link tags. To implement
+the ChecNavigation and ChecVerticalNavItem components, define a set of routes and wrap the child nav item components
+in the parent navigation component.
 
 <Props of={ChecVerticalNavigation} />
 
 <Preview>
-  <Story name="Default" decorators={[ StoryRouter({}, { routes })]}>
+  <Story name="Default" decorators={[ StoryRouter({}) ]}>
     {{
       components: {
         ChecVerticalNavigation,
@@ -40,11 +25,11 @@ The Vertical Navigation component uses the Vue router router-link component to r
       template: `
       <div class="py-16 flex bg-gray-200 justify-center">
         <ChecVerticalNavigation class="w-56">
-          <ChecVerticalNavItem to=/first>Hi I'm first</ChecVerticalNavItem>
-          <ChecVerticalNavItem to='/second'>Hi I'm second</ChecVerticalNavItem>
-          <ChecVerticalNavItem to='/third'>Hi I'm third</ChecVerticalNavItem>
-          <ChecVerticalNavItem to='/forth'>Hi I'm forth</ChecVerticalNavItem>
-          <ChecVerticalNavItem to='/fifth'>Hi I'm fifth</ChecVerticalNavItem>
+          <ChecVerticalNavItem to="#first">Hi I'm first</ChecVerticalNavItem>
+          <ChecVerticalNavItem to="#second">Hi I'm second</ChecVerticalNavItem>
+          <ChecVerticalNavItem to="#third">Hi I'm third</ChecVerticalNavItem>
+          <ChecVerticalNavItem to="#forth">Hi I'm forth</ChecVerticalNavItem>
+          <ChecVerticalNavItem to="#fifth">Hi I'm fifth</ChecVerticalNavItem>
         </ChecVerticalNavigation>
       </div>`
     }}
