--- a/src/stories/components/ChecFileUploader.stories.mdx
+++ b/src/stories/components/ChecFileUploader.stories.mdx
@@ -22,7 +22,7 @@ import FileRow from '../../components/ChecFileUploader/FileRow.vue';
       },
       data() {
         return {
-          files: {},
+          files: [],
         };
       },
       props: {
@@ -31,36 +31,19 @@ import FileRow from '../../components/ChecFileUploader/FileRow.vue';
         },
       },
       methods: {
-        addedFile(file) {
-          action('added-file')(file);
-          this.files = { ...this.files, [file.upload.uuid]: file };
+        change(files) {
+          action('change')(files);
         },
-        removeFile(file) {
-          action('remove-file')(file);
-          if (file.upload.progress < 100 && file.status !== 'error') {
-            return;
-          }
-          const files = { ...this.files };
-          delete files[file.upload.uuid];
-          this.files = { ...files };
-        },
-        uploadingFile(file) {
-          action('uploading-file-progress')(file);
-          this.files = { ...this.files, [file.upload.uuid]: file };
-        },
-        uploadingFileComplete(file) {
-          action('uploading-file-complete')(file);
-          this.files = { ...this.files, [file.upload.uuid]: file };
+        dropzoneEvent(eventName, ...args) {
+          action('dropzone-event')(eventName, args);
         },
       },
       template: `
         <div class="p-16 flex justify-center w-full h-full bg-white py-20">
           <ChecFileUploader
-            :files="Object.values(files)"
-            @file-added="addedFile"
-            @remove-file="removeFile"
-            @file-uploading="uploadingFile"
-            @file-uploading-complete="uploadingFileComplete"
+            v-model="files"
+            @dropzone-event="dropzoneEvent"
+            @change="change"
             :endpoint="endpoint"
           />
         </div>`
