Update tailwind and remove use of deprecated utilities

--- a/src/stories/directives/HologramParallax.stories.mdx
+++ b/src/stories/directives/HologramParallax.stories.mdx
@@ -14,11 +14,7 @@ import HologramParallax from '../../directives/HologramParallax';
           <div class="max-w-4xl w-full mx-auto p-16">
             <div class="bg-hologram h-64 rounded-lg w-full" v-hologram-parallax />
             <div
-              class="mt-32 text-5xl bg-hologram font-bold text-center"
-              style="
-                -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-                -moz-background-clip: text; -moz-text-fill-color: transparent;
-              "
+              class="mt-32 text-5xl font-bold text-center bg-clip-text bg-hologram text-transparent"
               v-hologram-parallax
             >
               Some holographic text with a parallax
