--- a/src/stories/styles/typography.stories.mdx
+++ b/src/stories/styles/typography.stories.mdx
@@ -42,7 +42,7 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
   <Story name="Variants">
     {{
       template: `
-        <div class="p-16 bg-gray-200 text-gray-500 grid grid-cols-2 col-gap-16 row-gap-12">
+        <div class="p-16 bg-gray-200 text-gray-500 grid grid-cols-2 gap-x-16 gap-y-12">
           <div class="p-8 bg-white caps-xs">
             <div class="mb-2 caps-xs text-gray-400">.caps-xs</div>
             Imagination will often carry us to worlds that never were, but without it we go nowhere.
@@ -63,7 +63,7 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
   <Story name="Faces">
     {{
       template: `
-        <div class="p-16 bg-gray-200 text-gray-500 grid grid-cols-2 col-gap-16 row-gap-12">
+        <div class="p-16 bg-gray-200 text-gray-500 grid grid-cols-2 gap-x-16 gap-y-12">
           <div class="p-8 bg-white font-lato">
             <div class="font-lato mb-2 caps-xs text-gray-400">.font-lato</div>
             Imagination will often carry us to worlds that never were, but without it we go nowhere.
